; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/qcommon/extr_files.c_FS_Rename.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/qcommon/extr_files.c_FS_Rename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.TYPE_4__ = type { i64 }

@fs_searchpaths = common dso_local global i32 0, align 4
@ERR_FATAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [45 x i8] c"Filesystem call made without initialization\0A\00", align 1
@fs_homepath = common dso_local global %struct.TYPE_3__* null, align 8
@fs_gamedir = common dso_local global i32 0, align 4
@fs_debug = common dso_local global %struct.TYPE_4__* null, align 8
@.str.1 = private unnamed_addr constant [22 x i8] c"FS_Rename: %s --> %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @FS_Rename(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i32, i32* @fs_searchpaths, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %2
  %10 = load i32, i32* @ERR_FATAL, align 4
  %11 = call i32 @Com_Error(i32 %10, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0))
  br label %12

12:                                               ; preds = %9, %2
  %13 = call i32 (...) @S_ClearSoundBuffer()
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** @fs_homepath, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @fs_gamedir, align 4
  %18 = load i8*, i8** %3, align 8
  %19 = call i8* @FS_BuildOSPath(i32 %16, i32 %17, i8* %18)
  store i8* %19, i8** %5, align 8
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** @fs_homepath, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @fs_gamedir, align 4
  %24 = load i8*, i8** %4, align 8
  %25 = call i8* @FS_BuildOSPath(i32 %22, i32 %23, i8* %24)
  store i8* %25, i8** %6, align 8
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** @fs_debug, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %34

30:                                               ; preds = %12
  %31 = load i8*, i8** %5, align 8
  %32 = load i8*, i8** %6, align 8
  %33 = call i32 @Com_Printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0), i8* %31, i8* %32)
  br label %34

34:                                               ; preds = %30, %12
  %35 = load i8*, i8** %5, align 8
  %36 = load i8*, i8** %6, align 8
  %37 = call i64 @rename(i8* %35, i8* %36)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %45

39:                                               ; preds = %34
  %40 = load i8*, i8** %5, align 8
  %41 = load i8*, i8** %6, align 8
  %42 = call i32 @FS_CopyFile(i8* %40, i8* %41)
  %43 = load i8*, i8** %5, align 8
  %44 = call i32 @FS_Remove(i8* %43)
  br label %45

45:                                               ; preds = %39, %34
  ret void
}

declare dso_local i32 @Com_Error(i32, i8*) #1

declare dso_local i32 @S_ClearSoundBuffer(...) #1

declare dso_local i8* @FS_BuildOSPath(i32, i32, i8*) #1

declare dso_local i32 @Com_Printf(i8*, i8*, i8*) #1

declare dso_local i64 @rename(i8*, i8*) #1

declare dso_local i32 @FS_CopyFile(i8*, i8*) #1

declare dso_local i32 @FS_Remove(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
